[project]
name = "mgba"
authors = [
  {name = "Jeffrey Pfau", email = "jeffrey@endrift.com"},
]
description = "Python bindings for mGBA"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.10"
dependencies = [
    "build>=1.3.0",
    "cffi>=1.17.1",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]
classifiers = [
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Topic :: System :: Emulators",
]
dynamic = ["version"]

[project.optional-dependencies]
pil = ["Pillow>=11.3.0"]
